--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,14 @@
-# Base image
 FROM node:18-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Install deps first (to leverage Docker caching)
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+COPY package.json ./
+RUN npm install --force
 
-# Copy the rest of the project
 COPY . .
 
-# Build the Next.js app
-RUN yarn build
-
-# Expose the port Next.js will run on
 EXPOSE 3000
 
-# Run the Next.js production server
-CMD ["yarn", "start"]
+ENV WATCHPACK_POLLING=true
+
+CMD ["npx", "dev"]
