Optimise dependencies and use pnpm

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package.json ./
-RUN npm install --force
+RUN pnpm install --force
 
 COPY . .
 
@@ -11,4 +11,4 @@ EXPOSE 3000
 
 ENV WATCHPACK_POLLING=true
 
-CMD ["npx", "dev"]
+CMD ["npx", "next", "dev", "--turbopack"]
