--- a/cad-service/Dockerfile
+++ b/cad-service/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.10-slim
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
+    git \
     libgl1-mesa-glx \
     libxrender1 \
     libxext6 \
@@ -11,7 +12,8 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install git+https://github.com/meadiode/cq_gears.git@main
 
 COPY . .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
