--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,9 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package.json ./
-RUN pnpm install --force
+
+RUN npm install -g pnpm
+RUN pnpm install
 
 COPY . .
 
